--- a/apps/docs/content/components/Label/index.mdx
+++ b/apps/docs/content/components/Label/index.mdx
@@ -146,5 +146,5 @@ You can add a leading icon to enhance the visual context. It is recommended you 
 
 ## Related components
 
-- To provide an action, use the [Button](/components/Button) component.
-- To prodive navigation, use the [Link](/components/Link) component.
+- [Button](/components/Button): To provide an action.
+- [Link](/components/Link): To provide navigation.
