--- a/apps/docs/content/components/Label/index.mdx
+++ b/apps/docs/content/components/Label/index.mdx
@@ -79,8 +79,7 @@ Use the `small` size for inline text or list items.
       alt=""
     />
     <Caption>
-      Give small labels enough space when used with longer content. For instance
-      a timeline made of paragraphs.
+      Give small labels enough space when used with longer content.
     </Caption>
   </div>
 </Box>
