--- a/apps/docs/content/components/Pillar/index.mdx
+++ b/apps/docs/content/components/Pillar/index.mdx
@@ -72,11 +72,11 @@ Pillars can be aligned to the start or center of the container. Aligning to the 
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/a9be67a6-79e0-460b-b3e3-44bb72e096a2" />
-    <Caption>Don't use center alignment when in groups of 5.</Caption>
+    <Caption>Don't use center alignment when in groups of 5 or more.</Caption>
   </Dont>
 </DoDontContainer>
 
 ## Related components
 
-- To display navigational related content, use the [Card](/components/Card) component.
-- To display a list of plain content items, use the [UnorderedList](/components/UnorderedList) or the [OrderedList](/components/OrderedList) component.
+- [Card](/components/Card): to display navigational related content with higher visual weight.
+- [UnorderedList](/components/UnorderedList) or the [OrderedList](/components/OrderedList): to display a list of plain content items.
