Updated Docs to Specify Default

--- a/apps/docs/content/components/MinimalFooter.mdx
+++ b/apps/docs/content/components/MinimalFooter.mdx
@@ -91,10 +91,10 @@ Only show GitHub social link:
 
 ### MinimalFooter.Link
 
-| Name       | Type          |   Default   | Description                         |
-| :--------- | :------------ | :---------: | :---------------------------------- |
-| `as`       | `a`, `button` | `undefined` | Applies the underlying HTML element |
-| `children` | `string`      | `undefined` | Link label text                     |
+| Name       | Type              |   Default   | Description                         |
+| :--------- | :---------------- | :---------: | :---------------------------------- |
+| `as`       | `'a'`, `'button'` |    `'a'`    | Applies the underlying HTML element |
+| `children` | `string`          | `undefined` | Link label text                     |
 
 ### MinimalFooter.Footnotes
 
