--- a/apps/docs/content/components/Pillar/index.mdx
+++ b/apps/docs/content/components/Pillar/index.mdx
@@ -56,6 +56,36 @@ When presenting more than four pillars, we recommend displaying them in multiple
 
 ![An image showing the Pillar anatomy with an icon, a heading and a description in a vertical order.](https://github.com/primer/brand/assets/912236/1d031ae9-bf4e-4e19-a7b7-c8cc0b7e5940)
 
+### Pillar and Card
+
+The Pillar and Card components might lead to ambiguity when deciding which one to use, as both could be used to provide pieces of related and condensed information. Some of the differences between them are:
+
+#### Interaction
+
+Cards should be used as navigational items to lead to the extend of the information, the link is always required. Pillars could be used for just plain, non-navigational content or include an optional link and lead to extra information.
+
+#### Hierarchy
+
+Cards should be used for noteworthy information to draw users attention. Pillars, in the other hand, should be used for common, less noticeable information compared to Cards.
+
+#### Group size
+
+Cards should be used in small groups (3, 4 or 5 items maximum) whereas Pillars might be used on both small and big groups (more than 5 items). The more items a users see's within a group, the less noticeable they become as unique elements.
+
+<DoDontContainer>
+  <Do>
+    <img src="https://github.com/primer/brand/assets/912236/ec95d12e-9202-4488-97b8-42656f638937" />
+    <Caption>Pillars are more suitable for groups of 5 or more items.</Caption>
+  </Do>
+  <Dont>
+    <img src="https://github.com/primer/brand/assets/912236/c0775fcd-7ef9-430d-9315-d3fdbd55947f" />
+    <Caption>
+      Don't use Cards for groups of 5 or more items. Use them sparingly in
+      groups of 3 or 4.
+    </Caption>
+  </Dont>
+</DoDontContainer>
+
 ## Options
 
 ### Align
@@ -79,4 +109,5 @@ Pillars can be aligned to the start or center of the container. Aligning to the 
 ## Related components
 
 - [Card](/components/Card): to display navigational related content with higher visual weight.
+- [CTABanner](/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action.
 - [UnorderedList](/components/UnorderedList) or the [OrderedList](/components/OrderedList): to display a list of plain content items.
