--- a/apps/docs/content/components/Button/react.mdx
+++ b/apps/docs/content/components/Button/react.mdx
@@ -8,10 +8,13 @@ storybook: '/brand/storybook/?path=/story/components-button--playground'
 description: Use Button for the main actions on a page or form.
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 import {ButtonVariants, ButtonSizes} from '@primer/react-brand'
 import {Box as Container} from '@primer/react'
 import {SearchIcon, ChevronDownIcon, FilterIcon} from '@primer/octicons-react'
-import {PropTableValues} from '../../src/components'
+import {PropTableValues} from '../../../src/components'
 
 ```js
 import {Button} from '@primer/react-brand'
