Add Related components section

--- a/apps/docs/content/components/Button/index.mdx
+++ b/apps/docs/content/components/Button/index.mdx
@@ -131,3 +131,9 @@ When used in a group, the arrow should be used or hide consistently across all b
 Labeling buttons properly lets users know what will happen when they activate the control, lessens errors, and increases confidence.
 
 Read more about [descriptive buttons](https://primer.style/design/guides/accessibility/descriptive-buttons/).
+
+## Related components
+
+- [ButtonGroup](/components/ButtonGroup): To display a group of related buttons.
+- [Link](/components/Link): To display a link that navigates to another page.
+- [Hero](/components/Hero): To display a large heading and a description with a ButtonGroup.
