--- a/apps/docs/content/components/Pillar/index.mdx
+++ b/apps/docs/content/components/Pillar/index.mdx
@@ -62,7 +62,7 @@ Pillar and Card components might lead to ambiguity when deciding which one to us
 
 #### Interaction
 
-Cards should be used as navigational items to lead to the extend of the information, the link is always required. Pillars could be used for just plain, non-navigational content or include an optional link and lead to extra information.
+Pillars are used mainly for plain content and might include an option link for extended information. On the other hands, Cards are primarily navigational elements.
 
 #### Hierarchy
 
