--- a/apps/docs/content/components/Pillar/index.mdx
+++ b/apps/docs/content/components/Pillar/index.mdx
@@ -62,7 +62,7 @@ Pillar and Card components might lead to ambiguity when deciding which one to us
 
 #### Interaction
 
-Pillars are used mainly for plain content and might include an option link for extended information. On the other hands, Cards are primarily navigational elements.
+Pillars are used mainly for plain content and might include an optional link for extended information. On the other hand, Cards are primarily navigational elements.
 
 #### Hierarchy
 
