--- a/apps/docs/content/components/Pillar/index.mdx
+++ b/apps/docs/content/components/Pillar/index.mdx
@@ -66,7 +66,7 @@ Pillars are used mainly for non-interactive content and might include an optiona
 
 #### Hierarchy
 
-Cards should be used for noteworthy information to draw users attention. Pillars, in the other hand, should be used for common, less noticeable information compared to Cards.
+Cards should be used for noteworthy information to immediately draw user attention. Pillars, on the other hand, should be used for lower priority information compared to Cards.
 
 #### Group size
 
