Added instagram to docs list

--- a/apps/docs/content/components/MinimalFooter.mdx
+++ b/apps/docs/content/components/MinimalFooter.mdx
@@ -81,13 +81,13 @@ Only show GitHub social link:
 
 ### MinimalFooter
 
-| Name                 | Type                                                                                           |                                    Default                                     | Description                                            |
-| :------------------- | :--------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------: | :----------------------------------------------------- |
-| `className`          | `string`                                                                                       |                                                                                | Sets a custom class on the root element                |
-| `children`           | <PropTableValues values={['MinimalFooter.Link', 'MinimalFooter.Footnotes', ]} addLineBreaks /> |                                  `undefined`                                   | Valid child components                                 |
-| `copyrightStatement` | `string` \| `ReactElement`                                                                     |                                                                                | The copyright statement to be displayed in the footer. |
-| `logoHref`           | `string`                                                                                       |                             `'https://github.com'`                             | The href for the GitHub logo.                          |
-| `socialLinks`        | `['twitter', 'github', 'linkedin', 'youtube', 'facebook', 'twitch', 'tiktok']` \| `false`      | `['twitter', 'github', 'linkedin', 'youtube', 'facebook', 'twitch', 'tiktok']` | Array of valid strings or `false` to hide all links    |
+| Name                 | Type                                                                                           |                                           Default                                           | Description                                            |
+| :------------------- | :--------------------------------------------------------------------------------------------- | :-----------------------------------------------------------------------------------------: | :----------------------------------------------------- |
+| `className`          | `string`                                                                                       |                                                                                             | Sets a custom class on the root element                |
+| `children`           | <PropTableValues values={['MinimalFooter.Link', 'MinimalFooter.Footnotes', ]} addLineBreaks /> |                                         `undefined`                                         | Valid child components                                 |
+| `copyrightStatement` | `string` \| `ReactElement`                                                                     |                                                                                             | The copyright statement to be displayed in the footer. |
+| `logoHref`           | `string`                                                                                       |                                   `'https://github.com'`                                    | The href for the GitHub logo.                          |
+| `socialLinks`        | `['twitter', 'github', 'linkedin', 'youtube', 'facebook', 'twitch', 'tiktok']` \| `false`      | `['twitter', 'github', 'linkedin', 'youtube', 'facebook', 'twitch', 'tiktok', 'instagram']` | Array of valid strings or `false` to hide all links    |
 
 ### MinimalFooter.Link
 
