--- a/apps/docs/content/components/ButtonGroup/index.mdx
+++ b/apps/docs/content/components/ButtonGroup/index.mdx
@@ -12,7 +12,7 @@ export default ComponentLayout
 
 Use ButtonGroup to group a set of actions that are related between them or to a single application. E,g, "Log in" and "Sign up" or "Try it out" and "Learn more".
 
-Use ButtonGroup to display a primary button with a secondary button, where the primary button should be the most important action and the secondary button should be a related action or a less important action.
+Use ButtonGroup to display a pair of primary and a secondary actions. The primary button is used for the main call to action while the secondary button is a related, less important action.
 
 <DoDontContainer>
   <Do>
