--- a/apps/docs/content/components/ButtonGroup/index.mdx
+++ b/apps/docs/content/components/ButtonGroup/index.mdx
@@ -29,7 +29,7 @@ Use ButtonGroup to display a pair of primary and a secondary actions. The primar
   <Do>
     <img src="https://github.com/primer/brand/assets/912236/5f0c4d9f-73fe-4464-bdda-576521588fb7" />
     <Caption>
-      Do place primary buttons at the beginning of a button group.
+      Place the primary button at the beginning of a button group.
     </Caption>
   </Do>
   <Dont>
