--- a/apps/docs/content/components/ButtonGroup/index.mdx
+++ b/apps/docs/content/components/ButtonGroup/index.mdx
@@ -34,7 +34,7 @@ Use ButtonGroup to display a pair of primary and a secondary actions. The primar
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/807bfc0e-c0f5-4792-a31a-b1208b913a0e" />
-    <Caption>Don't place primary buttons at the end of a button group.</Caption>
+    <Caption>Don't place the primary button at the end of a button group.</Caption>
   </Dont>
 </DoDontContainer>
 
