--- a/apps/docs/content/components/ButtonGroup/react.mdx
+++ b/apps/docs/content/components/ButtonGroup/react.mdx
@@ -42,7 +42,7 @@ The ButtonGroup component can be rendered in different sizes in `medium` and `la
 
 ### Polymorphism
 
-The `Button` components can render as a `button` or `a` HTML element. By default, it will render as a `button`.
+The `Button` component can render as a `button` or `a` HTML element. By default, it will render as a `button`.
 
 ```jsx live
 <ButtonGroup buttonsAs="a">
