--- a/apps/docs/content/components/Pillar/index.mdx
+++ b/apps/docs/content/components/Pillar/index.mdx
@@ -13,6 +13,7 @@ export default ComponentLayout
 - Icon: An optional visual cue related to the content of the Pillar.
 - Heading: The main title of the Pillar. It should be short and concise.
 - Description: Short text that extends the information provided by the heading.
+- Link: An optional link to extended the information.
 
 ## Usage
 
@@ -70,7 +71,7 @@ Cards should be used for noteworthy information to immediately draw user attenti
 
 #### Group size
 
-Cards should be used in small groups (3, 4 or 5 items maximum), whereas Pillars can be used in larger  (more than 5 items) or smaller groups. As users encounter an increasing number of items within a group, the distinctiveness of each individual element diminishes.
+Cards should be used in small groups (3, 4 or 5 items maximum), whereas Pillars can be used in larger (more than 5 items) or smaller groups. As users encounter an increasing number of items within a group, the distinctiveness of each individual element diminishes.
 
 <DoDontContainer>
   <Do>
