[Pillar] Add optional link (#290)
* Adjust default heading font-size

* Add optional link to Pillar

--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -124,6 +124,6 @@ The call to action label indicates the action or resource the card links to. It 
 
 ## Related components
 
-- [Pillar](/components/Pillar): To display non-navigational related content in a compact way, use the component.
-- [OrderedList](/components/OrderedList): To display a list of plain content items
-- [CTABanner](/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action
+- [Pillar](/components/Pillar): To display related content with less visual emphasis.
+- [CTABanner](/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action.
+- [UnorderedList](/components/UnorderedList) or the [OrderedList](/components/OrderedList): to display a list of plain content items.
