--- a/apps/docs/content/components/Pillar/index.mdx
+++ b/apps/docs/content/components/Pillar/index.mdx
@@ -8,11 +8,12 @@ export default ComponentLayout
 
 ## Anatomy
 
-![An image showing the Pillar anatomy with an icon, a heading and a description in a vertical order.](https://github.com/primer/brand/assets/912236/c52debd2-4277-42c9-9a73-bd6bd087dd1e)
+![An image showing the Pillar anatomy with an icon, a heading and a description in a vertical order.](https://github.com/primer/brand/assets/912236/a43841af-3ea8-488d-b948-b8cac82a1b00)
 
 - Icon: An optional visual cue related to the content of the Pillar.
 - Heading: The main title of the Pillar. It should be short and concise.
 - Description: Short text that extends the information provided by the heading.
+- Link: An optional link to extended the information.
 
 ## Usage
 
@@ -54,7 +55,37 @@ If displaying an icon, do so for all cards to achieve a visually balanced layout
 
 When presenting more than four pillars, we recommend displaying them in multiple rows. You can use the [Grid](/components/Grid) or the [Stack](/components/Stack) component to achieve this. We recommend using a grid with 3 or 4 columns and balancing the number of pillars on each row.
 
-![An image showing the Pillar anatomy with an icon, a heading and a description in a vertical order.](https://github.com/primer/brand/assets/912236/1d031ae9-bf4e-4e19-a7b7-c8cc0b7e5940)
+![An image showing a group of numerous Pillars stacked in a 3 column grid.](https://github.com/primer/brand/assets/912236/1d031ae9-bf4e-4e19-a7b7-c8cc0b7e5940)
+
+### Pillar and Card
+
+Pillar and Card are both components that are used to present related and/or condensed information. They have distinct use-cases however, with the main differences between them being:
+
+#### Interaction
+
+Pillars are used mainly for non-interactive content and might include an optional link for extended information. On the other hand, Cards are primarily navigational elements.
+
+#### Hierarchy
+
+Cards should be used for noteworthy information to immediately draw user attention. Pillars, on the other hand, should be used for lower priority information compared to Cards.
+
+#### Group size
+
+Cards should be used in small groups (3, 4 or 5 items maximum), whereas Pillars can be used in larger (more than 5 items) or smaller groups. As users encounter an increasing number of items within a group, the distinctiveness of each individual element diminishes.
+
+<DoDontContainer>
+  <Do>
+    <img src="https://github.com/primer/brand/assets/912236/ec95d12e-9202-4488-97b8-42656f638937" />
+    <Caption>Pillars are more suitable for groups of 5 or more items.</Caption>
+  </Do>
+  <Dont>
+    <img src="https://github.com/primer/brand/assets/912236/c0775fcd-7ef9-430d-9315-d3fdbd55947f" />
+    <Caption>
+      Don't use Cards for groups of 5 or more items. Use them sparingly in
+      groups of 3 or 4.
+    </Caption>
+  </Dont>
+</DoDontContainer>
 
 ## Options
 
@@ -72,11 +103,12 @@ Pillars can be aligned to the start or center of the container. Aligning to the 
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/a9be67a6-79e0-460b-b3e3-44bb72e096a2" />
-    <Caption>Don't use center alignment when in groups of 5.</Caption>
+    <Caption>Don't use center alignment when in groups of 5 or more.</Caption>
   </Dont>
 </DoDontContainer>
 
 ## Related components
 
-- To display navigational related content, use the [Card](/components/Card) component.
-- To display a list of plain content items, use the [UnorderedList](/components/UnorderedList) or the [OrderedList](/components/OrderedList) component.
+- [Card](/components/Card): to display navigational related content with higher visual weight.
+- [CTABanner](/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action.
+- [UnorderedList](/components/UnorderedList) or the [OrderedList](/components/OrderedList): to display a list of plain content items.
