Remove span from the prop table

--- a/apps/docs/content/components/Pillar/react.mdx
+++ b/apps/docs/content/components/Pillar/react.mdx
@@ -118,10 +118,10 @@ Use the `Stack` component to stack multiple Pillars horizontally or vertically.
 
 ### Pillar
 
-| name    | type                                                                  | default | required | description                                 |
-| ------- | --------------------------------------------------------------------- | ------- | -------- | ------------------------------------------- |
-| `align` | `start`, `center`                                                     | `start` | `false`  | Aligns the pillar content                   |
-| `as`    | <PropTableValues values={['div', 'article', 'span']} addLineBreaks /> | `'div'` | `false`  | The HTML element used to render the pillar. |
+| name    | type                                                          | default | required | description                                 |
+| ------- | ------------------------------------------------------------- | ------- | -------- | ------------------------------------------- |
+| `align` | `start`, `center`                                             | `start` | `false`  | Aligns the pillar content                   |
+| `as`    | <PropTableValues values={['div', 'article']} addLineBreaks /> | `'div'` | `false`  | The HTML element used to render the pillar. |
 
 ### Pillar.Icon
 
