--- a/apps/docs/content/components/Heading/index.mdx
+++ b/apps/docs/content/components/Heading/index.mdx
@@ -21,7 +21,7 @@ Headings are used to structure the content on the page, with each heading repres
 
 ### Scale and size
 
-The Heading scale ranges from 1-6 and maps to the HTML heading elements h1-h6 respectively. The size is determined by the type of HTML element specified, although you can override this when the scenario calls for it. E,g. use a bigger heading size to highlight an article that might be rellevant to the user.
+The Heading scale ranges from 1-6 and maps to the HTML heading elements h1-h6 respectively. The size is determined by the type of HTML element specified, although you can override this when the scenario calls for it. E.g. use a bigger heading size to highlight an article that might be relevant to the user.
 
 ### Weight, stretch and letter spacing
 
