[Button] Design guidelines (#292)
* Add Button design guidelines

--- a/apps/docs/content/components/Button/react.mdx
+++ b/apps/docs/content/components/Button/react.mdx
@@ -8,10 +8,13 @@ storybook: '/brand/storybook/?path=/story/components-button--playground'
 description: Use Button for the main actions on a page or form.
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 import {ButtonVariants, ButtonSizes} from '@primer/react-brand'
 import {Box as Container} from '@primer/react'
 import {SearchIcon, ChevronDownIcon, FilterIcon} from '@primer/octicons-react'
-import {PropTableValues} from '../../src/components'
+import {PropTableValues} from '../../../src/components'
 
 ```js
 import {Button} from '@primer/react-brand'
@@ -63,12 +66,6 @@ The animated arrow indicator can be removed using the `hasArrow` prop.
 ### Using an icon
 
 You can place an icon inside the Button in either the leading or the trailing position to enhance the visual context. It is recommended to use an [Octicon](https://primer.style/octicons) here.
-
-<Note>
-  Use a trailing visual if the button action involves selecting items (dropdown,
-  select, filter, etc), and a leading visual to provide visual context to the
-  adjacent label. E.g. Use a search icon for a search field submit action.
-</Note>
 
 ```jsx live
 <Stack direction="vertical" alignItems="flex-start">
