--- a/apps/docs/content/components/Heading/index.mdx
+++ b/apps/docs/content/components/Heading/index.mdx
@@ -44,6 +44,23 @@ While sighted users rely on visual cues such as font size changes to determine w
 
 Headings allow assistive technology users to quickly navigate around a page. Navigation as text that is not meant to be a heading can be a confusing experience. [Learn more about best heading practices (WAI Headings)](https://www.w3.org/WAI/tutorials/page-structure/headings/).
 
+<DoDontContainer>
+  <Do>
+    <img src="https://github.com/primer/brand/assets/912236/1fe099cf-a6ea-4e1f-9f6b-8ee7aebefd06" />
+    <Caption>
+      Use headings with a lower rank to start new subsections that are part of
+      the higher ranked section.
+    </Caption>
+  </Do>
+  <Dont>
+    <img src="https://github.com/primer/brand/assets/912236/2b74dd50-fab8-4a6c-8661-71ecfa94de9c" />
+    <Caption>
+      Don't skip heading ranks. Make sure that a h2 is not followed directly by
+      an h4, for example.
+    </Caption>
+  </Dont>
+</DoDontContainer>
+
 ## Related components
 
 - [Text](/components/Text): to render body content
