Use sentence case;

--- a/apps/docs/content/components/Avatar/index.mdx
+++ b/apps/docs/content/components/Avatar/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Avatar
-description: Use Avatar to display a thumbnail representation of a person.
+description: Use avatar to display a thumbnail representation of a person.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
