--- a/apps/docs/content/components/Button/index.mdx
+++ b/apps/docs/content/components/Button/index.mdx
@@ -1,12 +1,12 @@
 ---
 title: Button
-description: Use Button for the main actions on a page or form.
+description: Use button for the main actions on a page or form.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
-![An image showing different Button types.](https://github.com/primer/brand/assets/912236/435f104b-47a5-49d8-9568-6825f2b3789c)
+![An image showing different button types.](https://github.com/primer/brand/assets/912236/435f104b-47a5-49d8-9568-6825f2b3789c)
 
 ## Usage
 
@@ -49,7 +49,7 @@ Buttons allow users to initiate an action or command when clicked. The button's 
 
 ## Anatomy
 
-![An image showing different Button types.](https://github.com/primer/brand/assets/912236/af85252d-783e-47dd-9b2c-ead0df0745b9)
+![An image showing different button types.](https://github.com/primer/brand/assets/912236/af85252d-783e-47dd-9b2c-ead0df0745b9)
 
 ## Options
 
@@ -75,7 +75,7 @@ Subtle buttons have a transparent background with translucent hover and active s
 
 ### Trailing and leading icons
 
-You can place an icon inside the Button in either the leading or the trailing position to enhance the visual context. It is recommended to use an use an [Octicon](https://primer.style/octicons) here.
+You can place an icon inside the button in either the leading or the trailing position to enhance the visual context. It is recommended to use an use an [Octicon](https://primer.style/octicons) here.
 
 Use a trailing visual if the button action involves selecting items (dropdown, select, filter, etc), and a leading visual to provide visual context to the adjacent label. E.g. Use a search icon for a search field submit action.
 
