--- a/apps/docs/content/components/ButtonGroup/react.mdx
+++ b/apps/docs/content/components/ButtonGroup/react.mdx
@@ -1,6 +1,6 @@
 ---
-title: ButtonGroup
-description: Use ButtonGroup to group related buttons together.
+title: Button group
+description: Use button group to group related buttons together.
 status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/ButtonGroup/ButtonGroup.tsx
 storybook: '/brand/storybook/?path=/story/components-buttongroup--playground'
