--- a/apps/docs/content/components/Heading/index.mdx
+++ b/apps/docs/content/components/Heading/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Heading
-description: Use the Heading component to render title or subtitle text
+description: Use the heading component to render title or subtitle text
 ---
 
 import CustomVideoPlayer from '../../../src/components/custom-video-player'
@@ -21,15 +21,15 @@ Headings are used to structure the content on the page, with each heading repres
 
 ### Scale and size
 
-The Heading scale ranges from 1 to 6 and maps to the HTML heading elements h1 to h6 respectively. The size is determined by the type of HTML element specified, although you can override this when the scenario calls for it. E.g. use a `h2` heading size on a `<h3>` to highlight an article that might be relevant to the user.
+The heading scale ranges from 1 to 6 and maps to the HTML heading elements h1 to h6 respectively. The size is determined by the type of HTML element specified, although you can override this when the scenario calls for it. E.g. use a `h2` heading size on a `<h3>` to highlight an article that might be relevant to the user.
 
 ### Weight, stretch and letter spacing
 
-The Heading component also supports the following options: `weight`, `stretch` and `letterSpacing`. Each of these options are determined by the heading scale and size, but can be overridden when the scenario calls for it.
+The heading component also supports the following options: `weight`, `stretch` and `letterSpacing`. Each of these options are determined by the heading scale and size, but can be overridden when the scenario calls for it.
 
 ### Responsive
 
-The Heading component is responsive by default and the size will scale down on smaller screens. Weight, stretch and letter spacing will remain the same across all screen sizes but can be overridden for each breakpoint.
+The heading component is responsive by default and the size will scale down on smaller screens. Weight, stretch and letter spacing will remain the same across all screen sizes but can be overridden for each breakpoint.
 
 <div>
   <CustomVideoPlayer
