--- a/apps/docs/content/components/ButtonGroup/index.mdx
+++ b/apps/docs/content/components/ButtonGroup/index.mdx
@@ -1,18 +1,18 @@
 ---
-title: ButtonGroup
-description: Use ButtonGroup to group related buttons together.
+title: Button group
+description: Use button group to group related buttons together.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
-![An image showing a ButtonGroup with a primary and a secondary button.](https://github.com/primer/brand/assets/912236/89ab4157-3c7a-4657-a7f0-1e481c943c41)
+![An image showing a button group with a primary and a secondary button.](https://github.com/primer/brand/assets/912236/89ab4157-3c7a-4657-a7f0-1e481c943c41)
 
 ## Usage
 
-Use ButtonGroup to group a set of actions that are related between them or to a single application. E,g, "Log in" and "Sign up" or "Try it out" and "Learn more".
+Use button group to group a set of actions that are related between them or to a single application. E,g, "Log in" and "Sign up" or "Try it out" and "Learn more".
 
-Use ButtonGroup to display a pair of primary and a secondary actions. The primary button is used for the main call to action while the secondary button is a related, less important action.
+Use button group to display a pair of primary and a secondary actions. The primary button is used for the main call to action while the secondary button is a related, less important action.
 
 <DoDontContainer>
   <Do>
@@ -34,7 +34,9 @@ Use ButtonGroup to display a pair of primary and a secondary actions. The primar
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/807bfc0e-c0f5-4792-a31a-b1208b913a0e" />
-    <Caption>Don't place the primary button at the end of a button group.</Caption>
+    <Caption>
+      Don't place the primary button at the end of a button group.
+    </Caption>
   </Dont>
 </DoDontContainer>
 
@@ -58,10 +60,10 @@ Use ButtonGroup to display a pair of primary and a secondary actions. The primar
 
 ### Size
 
-The ButtonGroup component has two sizes: `medium` and `large`. The `medium` size should be used for most cases. The `large` size should be used when the ButtonGroup is used in large headings that introduces a page, as in the [Hero](/components/Hero) component.
+The button group component has two sizes: `medium` and `large`. The `medium` size should be used for most cases. The `large` size should be used when the button group is used in large headings that introduces a page, as in the [Hero](/components/Hero) component.
 
 ## Related components
 
 - [Button](/components/Button): To display a button that performs an action.
 - [Link](/components/Link): To display a link that navigates to another page.
-- [Hero](/components/Hero): To display a large heading and a description with a ButtonGroup.
+- [Hero](/components/Hero): To display a large heading and a description with a button group.
