--- a/apps/docs/content/components/Label/react.mdx
+++ b/apps/docs/content/components/Label/react.mdx
@@ -4,7 +4,7 @@ status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=6084-28401'
 source: https://github.com/primer/brand/blob/main/packages/react/src/Label/Label.tsx
 storybook: '/brand/storybook/?path=/story/components-label--default'
-description: Use Labels to add metadata or indicate the status of items.
+description: Use labels to add metadata or indicate the status of items.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
