--- a/apps/docs/content/components/Text/react.mdx
+++ b/apps/docs/content/components/Text/react.mdx
@@ -5,8 +5,11 @@ a11yReviewed: true
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=354%3A9513'
 source: https://github.com/primer/brand/blob/main/packages/react/src/Text/Text.tsx
 storybook: '/brand/storybook/?path=/story/components-text--scale'
-description: Use the Text component to render body content
+description: Use the text component to render body content
 ---
+
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
 
 import {
   TextSizes,
@@ -18,7 +21,7 @@ import {
   defaultTextSize,
 } from '@primer/react-brand'
 import {Box as Container} from '@primer/react'
-import {PropTableValues} from '../../src/components'
+import {PropTableValues} from '../../../src/components'
 
 ```js
 import {Text} from '@primer/react-brand'
