Add hero design guidelines

--- a/apps/docs/content/components/Pillar/index.mdx
+++ b/apps/docs/content/components/Pillar/index.mdx
@@ -109,6 +109,7 @@ Pillars can be aligned to the start or center of the container. Aligning to the 
 
 ## Related components
 
-- [Card](/components/Card): to display navigational related content with higher visual weight.
+- [Card](/components/Card): To display navigational related content with higher visual weight.
+- [River](/components/River): To display a list of content items with a visual asset.
 - [CTABanner](/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action.
-- [UnorderedList](/components/UnorderedList) or the [OrderedList](/components/OrderedList): to display a list of plain content items.
+- [UnorderedList](/components/UnorderedList) or the [OrderedList](/components/OrderedList): To display a list of plain content items.
