--- a/apps/docs/content/components/ButtonGroup/index.mdx
+++ b/apps/docs/content/components/ButtonGroup/index.mdx
@@ -34,7 +34,9 @@ Use ButtonGroup to display a pair of primary and a secondary actions. The primar
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/807bfc0e-c0f5-4792-a31a-b1208b913a0e" />
-    <Caption>Don't place the primary button at the end of a button group.</Caption>
+    <Caption>
+      Don't place the primary button at the end of a button group.
+    </Caption>
   </Dont>
 </DoDontContainer>
 
@@ -58,10 +60,11 @@ Use ButtonGroup to display a pair of primary and a secondary actions. The primar
 
 ### Size
 
-The ButtonGroup component has two sizes: `medium` and `large`. The `medium` size should be used for most cases. The `large` size should be used when the ButtonGroup is used in large headings that introduces a page, as in the [Hero](/components/Hero) component.
+The ButtonGroup component has two sizes: `medium` and `large`. The `medium` size should be used for most cases. The `large` size should be used when the ButtonGroup is used in large headings that introduces a page, as in the [Hero](/components/Hero) or the [CTABanner](/components/CTABanner) component.
 
 ## Related components
 
 - [Button](/components/Button): To display a button that performs an action.
 - [Link](/components/Link): To display a link that navigates to another page.
-- [Hero](/components/Hero): To display a large heading and a description with a ButtonGroup.
+- [Hero](/components/Hero): To display a large heading and a description with a button group.
+- [CTABanner](/components/CTABanner): To draw attention to or create urgency around a user action.
