--- a/apps/docs/content/components/Hero/react.mdx
+++ b/apps/docs/content/components/Hero/react.mdx
@@ -4,8 +4,11 @@ status: Experimental
 figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=431%3A8481
 source: https://github.com/primer/brand/blob/main/packages/react/src/Hero/Hero.tsx
 storybook: '/brand/storybook/?path=/story/components-hero--default'
-description: Use the Hero component to render a full-width banner on a webpage
+description: Use the hero component to render a full-width banner on a webpage
 ---
+
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
 
 import {
   HeadingTags,
@@ -16,7 +19,7 @@ import {
   HeadingLetterSpacing,
 } from '@primer/react-brand'
 import {Label} from '@primer/react'
-import {PropTableValues} from '../../src/components'
+import {PropTableValues} from '../../../src/components'
 
 ```js
 import {Hero} from '@primer/react-brand'
